--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/axios": "^0.9.36",
     "axios": "^1.9.0",
+    "lightweight-charts": "^5.0.7",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
